app/styles/tailwind.css
@import "tailwindcss";

@layer base {
  @font-face {
    font-family: "Virgil";
    src: url("https://excalidraw.com/Virgil.woff2");
  }

  @font-face {
    font-family: "Cascadia";
    src: url("https://excalidraw.com/Cascadia.woff2");
  }

  @font-face {
    font-family: "Assistant";
    src: url("https://excalidraw.com/Assistant-Regular.woff2");
  }
}

@theme {
  --font-sans:
    "Ubuntu", "Noto Sans JP", "Inter", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --font-mono: "Ubuntu Mono", "Noto Sans JP", "sans-serif";

  --color-geb-blue: #002538;
  --color-base-color: #f0f0e0;
  --color-paper-color: #fffff0;
  --color-sub-color: #a2a2ad;
  --color-text-main: #002538;
  --color-text-sub: #63676b;
  --color-border-color: #ccc5b8;
}

@utility rounded-iconic-xs {
  border-top-right-radius: 2px 5px;
  border-bottom-left-radius: 5px 2px;
}

@utility rounded-iconic-sm {
  border-top-right-radius: 4px 10px;
  border-bottom-left-radius: 10px 4px;
}

@utility rounded-iconic-md {
  border-top-right-radius: 6px 16px;
  border-bottom-left-radius: 16px 6px;
}

@utility rounded-iconic-lg {
  border-top-right-radius: 8px 21px;
  border-bottom-left-radius: 21px 8px;
}

@utility rounded-iconic-xl {
  border-top-right-radius: 12px 32px;
  border-bottom-left-radius: 32px 12px;
}

@utility rounded-iconic-2xl {
  border-top-right-radius: 16px 43px;
  border-bottom-left-radius: 43px 16px;
}

@utility rounded-iconic-3xl {
  border-top-right-radius: 24px 64px;
  border-bottom-left-radius: 64px 24px;
}

@utility blur-mask {
  -webkit-mask: linear-gradient(#000 90%, transparent);
  mask: linear-gradient(#000 90%, transparent);
}

@utility shadow-float {
  --tw-shadow: 0 0 24px rgba(0, 0, 0, 0.2);
  --tw-shadow-colored: 0 0 24px var(--tw-shadow-color);
  box-shadow:
    var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

